--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to Gowri Sankar Reddy Tatipathi's Website!</h1>
     <p>Hello! I am Gowri Sankar Reddy Tatipathi from India. I completed my undergraduate degree in Computer Science with a GPA of 3.59/4.0. I am currently pursuing my Master's at Indiana University Bloomington.</p>
     <p>Feel free to explore this website to know more about me and my projects!</p>
-    <img src="myimg.HEIC" alt="A photo of Gowri Sankar" width="300">
+    <img src="myimg.jpg" alt="A photo of Gowri Sankar" width="300">
 
     <nav>
         <ul>
